--- a/FarnaPreview/FarnaPreview.csproj
+++ b/FarnaPreview/FarnaPreview.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>3fb38853-d229-482e-a4ad-3b43b74f9a88</ProjectGuid>
+    <ProjectGuid>{3FB38853-D229-482E-A4AD-3B43B74F9A88}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>FarnaPreview</RootNamespace>
@@ -29,25 +29,87 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>key.pfx</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    
-    <Reference Include="System.Core"/>
-    <Reference Include="System.Xml.Linq"/>
-    <Reference Include="System.Data.DataSetExtensions"/>
-    
-    
-    <Reference Include="Microsoft.CSharp"/>
-    
-    <Reference Include="System.Data"/>
-    
-    <Reference Include="System.Net.Http"/>
-    
-    <Reference Include="System.Xml"/>
+    <Reference Include="SharpShell, Version=2.7.1.0, Culture=neutral, PublicKeyToken=f14dc899472fe6fb, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpShell.2.7.1\lib\net40-client\SharpShell.dll</HintPath>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="FarnaPreviewControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="FarnaPreviewControl.Designer.cs">
+      <DependentUpon>FarnaPreviewControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FarnaPreviewHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="key.pfx" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="FarnaPreviewControl.resx">
+      <DependentUpon>FarnaPreviewControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\MelsMeVubecRad.mp3" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\TaONas.mp3" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BokyJakoSkrin.mp3" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\MamBokyJakoSkrin.mp3" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\MamBokyJakoSkrin.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\MelsMeVubecRad.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\TaONas.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\MamBokyJakoSkrin.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\MelsMeVubecRad.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\TaONas.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\image823.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
- </Project>
+</Project>
